# lenovo-showroom-scraper

./: .env.example  .gitignore  Makefile  QUARTERLY-REFRESH.md  README.md  pyproject.toml
config/: sheet_mapping.json
fixtures/: TS_Price_List_T2_April_2026.xlsx
scripts/: apply_to_d1.py  generate_seed.py  scrape_all.py
src/: cli.py  download_images.py  parse_xlsx.py  push.py  scrape_psref.py
tests/: test_parse_xlsx.py
